[workspace]
members = [
  "crates/bloom",
  "crates/client-wasm",
  "crates/client-wasm",
  "crates/core",
  "crates/file-store",
  "crates/kuchiki",
  "crates/optics",
  "crates/speedy-kv",
  "crates/zimba",
]
resolver = "2"

[profile.release]
debug = true
lto = "thin"

[profile.bench]
debug = true

[workspace.dependencies]
aes-gcm = "0.10.2"
ahash = "0.8.11"
anyhow = {version = "1.0.72", features = ["backtrace"]}
async-channel = "1.8.0"
async-stream = "0.3.3"
axum = "0.7.2"
axum-extra = {version = "0.9.0"}
axum-macros = "0.4.0"
base64 = "0.21.4"
bincode = {git = "https://github.com/bincode-org/bincode", rev = "8f65c60", features = [
  "serde",
]}
bindgen = "0.69.2"
bitvec = {version = "1.0.1", features = ["serde"]}
bytecount = "0.6.7"
bytemuck = {version = "1.13.1", features = ["derive"]}
byteorder = "1.4.3"
bzip2 = "0.4.4"
candle-core = "0.3.3"
candle-nn = "0.3.3"
candle-transformers = "0.3.3"
cc = {version = "1", features = ["parallel"]}
chardetng = "0.1.17"
chitchat = "0.5.0"
chrono = {version = "0.4.23", features = ["serde"]}
clap = {version = "4.4.6", features = ["derive"]}
cmake = "0.1"
criterion = "0.5.1"
crossbeam-channel = "0.5.6"
csv = "1.1.6"
dashmap = {version = "5.4.0", features = ["rayon"]}
deadpool = "0.12.1"
encoding_rs = "0.8.31"
enum_dispatch = "0.3.12"
eventsource-stream = "0.2.3"
fend-core = "1.4.8"
flate2 = "1.0.28"
fnv = "1.0.3"
fst = {version = "0.4.7", features = ["levenshtein"]}
futures = "0.3.21"
half = {version = "2.2.1", features = ["serde"]}
hashbrown = {version = "0.14.0", features = ["serde"]}
http = "1.0.0"
image = "0.24.3"
indicatif = {version = "0.17.7", features = ["rayon"]}
insta = "1.31"
itertools = "0.11.0"
lalrpop = {version = "0.20.0", features = ["lexer"]}
lalrpop-util = {version = "0.20.0", features = ["lexer"]}
libc = "0.2.142"
log = {version = "0.4", features = ["release_max_level_info"]}
logos = "0.13.0"
lz-str = "0.2.1"
lz4_flex = "0.11.1"
lzma = "0.2.2"
maplit = "1.0.2"
md5 = "0.7.0"
memmap2 = "0.9.0"
mime = "0.3.17"
min-max-heap = "1.3.0"
nom = "7.1.3"
num-bigint = "0.4.1"
num-rational = "0.4.1"
once_cell = "1.13.1"
openraft = {version = "0.9.1", features = [
  "storage-v2",
  "serde",
  "tracing-log",
]}
postcard = {version = "1.0.8", features = ["experimental-derive", "alloc"]}
proptest = "1.2.0"
proptest-derive = "0.4.0"
publicsuffix = "2.2.3"
quick-xml = "0.30.0"
rand = "0.8.5"
rayon = "1.5.3"
redb = "2.0.0"
regex = "1.6.0"
reqwest = {version = "0.11.16", features = ["blocking", "stream", "json"]}
ring = "0.17.3"
rio_api = "0.8.4"
rio_turtle = "0.8.4"
rkyv = {version = "0.7.44", features = ["validation", "bytecheck"]}
robotstxt-with-cache = "0.4.0"
rusqlite = {version = "0.29.0", features = [
  "bundled",
  "modern-full",
  "buildtime_bindgen",
]}
rust-s3 = {version = "0.33.0", features = ["blocking", "tokio"]}
rust-stemmers = "1.2.0"
safetensors = "0.3.1"
scylla = {version = "0.12.0", features = ["chrono"]}
serde = {version = "1.0.137", features = ["rc", "derive"]}
serde_json = "1.0.81"
serde_urlencoded = "0.7.1"
stable_deref_trait = "1.2.0"
strum = {version = "0.26.2", features = ["derive"]}
tantivy = {git = "https://github.com/quickwit-oss/tantivy", rev = "74940e9"}
thiserror = "1.0.31"
tikv-jemallocator = "0.5"
tokenizers = "0.13.2"
tokio = {version = "1.23.1", features = ["full"]}
tokio-stream = "0.1.11"
toml = "0.8.2"
tower = {version = "0.4.13", features = ["limit"]}
tower-http = {version = "0.5.0", features = ["compression-gzip", "cors"]}
tracing = {version = "0.1.34", features = ["release_max_level_info"]}
tracing-subscriber = {version = "0.3.11", features = ["env-filter"]}
tracing-test = "0.2.4"
url = {version = "2.4.0", features = ["serde"]}
urlencoding = "2.1.2"
utoipa = {version = "4.0.0", features = ["axum_extras"]}
utoipa-swagger-ui = {version = "5.0.0", features = ["axum"]}
uuid = "1.1.2"
whatlang = {version = "0.16.0", features = ["serde"]}
xxhash-rust = {version = "0.8.10", features = ["xxh3", "const_xxh3"]}
zstd = "0.13"

[profile.test.package]
flate2.opt-level = 3
