[package]
name = "optics"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = { workspace = true }
lalrpop-util = { workspace = true }
once_cell = { workspace = true }
itertools = { workspace = true }
logos = { workspace = true }
serde = { workspace = true }

[build-dependencies]
lalrpop = { workspace = true }