[package]
name = "stract-cli"
version = "0.1.0"
edition = "2021"
default-run = "stract"

[[bin]]
name = "stract"
path = "src/main.rs"

[features]
cors = ["stract-core/cors"]
default = []
dev = ["cors"]
libtorch = ["stract-core/libtorch"]
prod = ["cors", "libtorch"]
with_alice = ["libtorch"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
stract-config.workspace = true
stract-core.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
webgraph.workspace = true

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator.workspace = true
