[package]
authors = ['Stract <hello@stract.com>']
edition = "2021"
license = "AGPL-3.0"
name = "client-wasm"
publish = false
version = "0.1.0"
wasm-opt = false

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[package.metadata.wasm-pack.profile.dev]
wasm-opt = false

[package.metadata.wasm-pack.profile.profiling]
wasm-opt = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
js-sys = "0.3.60"
serde = { version = "1.0.137", features = ["rc", "derive"] }
serde-wasm-bindgen = "0.6.3"
serde_json = "1.0"
thiserror = "1.0.31"
wasm-bindgen = "0.2.83"
bincode = { workspace = true }

optics = { path = "../optics" }
