[package]
authors = ['Stract ApS. <hello@trystract.com>']
default-run = "stract"
edition = "2021"
license = "AGPL-3.0-or-later"
name = "stract"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
cors = []
default = ["cors", "with_alice", "libtorch"]
dev = ["cors"]
libtorch = ["dep:tch"]
prod = ["cors", "libtorch"]
with_alice = ["libtorch"]

[[bin]]
name = "stract"
path = "src/main.rs"

[dependencies]
aes-gcm = {workspace = true}
anyhow = {workspace = true}
async-stream = {workspace = true}
async-trait = {workspace = true}
axum = {workspace = true}
axum-macros = {workspace = true}
base64 = {workspace = true}
bincode = {workspace = true}
bitvec = {workspace = true}
bytemuck = {workspace = true}
byteorder = {workspace = true}
bzip2 = {workspace = true}
chitchat = {workspace = true}
chrono = {workspace = true}
clap = {workspace = true}
crossbeam-channel = {workspace = true}
csv = {workspace = true}
dashmap = {workspace = true}
distributed.workspace = true
encoding_rs = {workspace = true}
entity_index.workspace = true
executor.workspace = true
fend-core = {workspace = true}
flate2 = {workspace = true}
fst = {workspace = true}
futures = {workspace = true}
half = {workspace = true}
hashbrown = {workspace = true}
http = {workspace = true}
hyperloglog.workspace = true
image = {workspace = true}
imager.workspace = true
indicatif = {workspace = true}
itertools = {workspace = true}
kuchiki = {workspace = true}
kv.workspace = true
lalrpop-util = {workspace = true}
leaky_queue.workspace = true
libc = {workspace = true}
logos = {workspace = true}
lz4_flex = {workspace = true}
md5 = {workspace = true}
memmap2 = {workspace = true}
mime = {workspace = true}
min-max-heap = {workspace = true}
num_cpus = {workspace = true}
once_cell = {workspace = true}
optics = {workspace = true}
parse_wiki_text = {workspace = true}
publicsuffix = {workspace = true}
quick-xml = {workspace = true}
rand = {workspace = true}
rayon = {workspace = true}
regex = {workspace = true}
reqwest = {workspace = true}
ring = {workspace = true}
rio_api = {workspace = true}
rio_turtle = {workspace = true}
rkyv = {workspace = true}
robotstxt-with-cache = {workspace = true}
rocksdb = {workspace = true}
rust-s3 = {workspace = true}
rust-stemmers = {workspace = true}
safetensors = {workspace = true}
schema.workspace = true
scylla = {workspace = true}
serde = {workspace = true}
serde_json = {workspace = true}
serde_urlencoded = {workspace = true}
simhash.workspace = true
sonic.workspace = true
stdx.workspace = true
tantivy = {workspace = true}
tch = {workspace = true, optional = true}
thiserror = {workspace = true}
tokenizer.workspace = true
tokenizers = {workspace = true}
tokio = {workspace = true}
tokio-stream = {workspace = true}
toml = {workspace = true}
tower-http = {workspace = true}
tracing = {workspace = true}
tracing-subscriber = {workspace = true}
url = {workspace = true}
urlencoding = {workspace = true}
utoipa = {workspace = true}
utoipa-swagger-ui = {workspace = true}
uuid = {workspace = true}
warc.workspace = true
webgraph.workspace = true
whatlang = {workspace = true}

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = {workspace = true}

[build-dependencies]
lalrpop = {workspace = true}

[dev-dependencies]
criterion = {workspace = true}
maplit = {workspace = true}
proptest = {workspace = true}
proptest-derive = {workspace = true}

[[example]]
name = "alice"
required-features = ["with_alice"]

[[bench]]
harness = false
name = "search-preindexed"

[[bench]]
harness = false
name = "search-preindexed-optic"

[[bench]]
harness = false
name = "harmonic-centrality"

[[bench]]
harness = false
name = "abstractive-summarizer"

[[bench]]
harness = false
name = "build-similarity"

[[bench]]
harness = false
name = "spell-correction"

[[bench]]
harness = false
name = "similar-sites"

[[bench]]
harness = false
name = "hyperloglog"

[[bench]]
harness = false
name = "naive-bayes"
