[package]
authors = ['Stract <hello@stract.com>']
default-run = "stract"
edition = "2021"
license = "AGPL-3.0"
name = "stract"
publish = false
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
cors = []
default = ["cors"]
dev = ["cors"]
prod = ["cors"]

[[bin]]
name = "stract"
path = "src/main.rs"

[dependencies]
ahash = { workspace = true }
aes-gcm = { workspace = true }
anyhow = { workspace = true }
async-channel = { workspace = true }
async-stream = { workspace = true }
axum = { workspace = true }
axum-extra = { workspace = true }
axum-macros = { workspace = true }
base64 = { workspace = true }
bincode = { workspace = true }
bitvec = { workspace = true }
bloom = { path = "../bloom" }
bytecount = { workspace = true }
bytemuck = { workspace = true }
byteorder = { workspace = true }
bzip2 = { workspace = true }
candle-core = { workspace = true }
candle-nn = { workspace = true }
candle-transformers = { workspace = true }
chardetng = { workspace = true }
chitchat = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
crossbeam-channel = { workspace = true }
csv = { workspace = true }
dashmap = { workspace = true }
encoding_rs = { workspace = true }
enum_dispatch = { workspace = true }
eventsource-stream = { workspace = true }
fend-core = { workspace = true }
file_store = { path = "../file-store" }
flate2 = { workspace = true }
fnv = { workspace = true }
fst = { workspace = true }
futures = { workspace = true }
half = { workspace = true }
hashbrown = { workspace = true }
http = { workspace = true }
image = { workspace = true }
indicatif = { workspace = true }
itertools = { workspace = true }
kuchiki = { path = "../kuchiki" }
libc = { workspace = true }
log = { workspace = true }
logos = { workspace = true }
lz-str = { workspace = true }
lz4_flex = { workspace = true }
md5 = { workspace = true }
memmap = { workspace = true }
memmap2 = { workspace = true }
mime = { workspace = true }
min-max-heap = { workspace = true }
nom = { workspace = true }
num_cpus = { workspace = true }
once_cell = { workspace = true }
openraft = { workspace = true }
optics = { path = "../optics" }
publicsuffix = { workspace = true }
postcard = { workspace = true }
quick-xml = { workspace = true }
rand = { workspace = true }
rayon = { workspace = true }
redb = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
rkyv = { workspace = true }
ring = { workspace = true }
rio_api = { workspace = true }
rio_turtle = { workspace = true }
robotstxt-with-cache = { workspace = true }
rust-s3 = { workspace = true }
rust-stemmers = { workspace = true }
safetensors = { workspace = true }
scylla = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_urlencoded = { workspace = true }
speedy_kv = { path = "../speedy-kv" }
strum = { workspace = true }
tantivy = { workspace = true }
thiserror = { workspace = true }
tokenizers = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
toml = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
url = { workspace = true }
urlencoding = { workspace = true }
utoipa = { workspace = true }
utoipa-swagger-ui = { workspace = true }
uuid = { workspace = true }
whatlang = { workspace = true }
zimba = { path = "../zimba" }
xxhash-rust = { workspace = true }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
insta = { workspace = true }
maplit = { workspace = true }
proptest = { workspace = true }
proptest-derive = { workspace = true }
tracing-test = { workspace = true }

[[bench]]
harness = false
name = "harmonic_centrality"

[[bench]]
harness = false
name = "hyperloglog"

[[bench]]
harness = false
name = "naive_bayes"

[[bench]]
harness = false
name = "bitvec_similarity"

[[example]]
name = "search_preindexed"

[[example]]
name = "bitvec_similarity"

[[example]]
name = "indexer"

[[example]]
name = "distributed_harmonic"
