[package]
name = "crawler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
bincode.workspace = true
chrono.workspace = true
distributed.workspace = true
encoding_rs.workspace = true
futures.workspace = true
hashbrown.workspace = true
hyperloglog.workspace = true
kv.workspace = true
memmap2.workspace = true
mime.workspace = true
proptest.workspace = true
quick-xml.workspace = true
rand.workspace = true
rayon.workspace = true
reqwest.workspace = true
rkyv.workspace = true
robotstxt-with-cache.workspace = true
rust-s3.workspace = true
serde.workspace = true
serde_json.workspace = true
sonic.workspace = true
stdx.workspace = true
stract-config.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tracing.workspace = true
url.workspace = true
uuid.workspace = true
warc.workspace = true
webgraph.workspace = true
webpage.workspace = true
